# yfiotlock

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro  yfiotlock.jks
app/release/: app-release.apk  output.json
app/src/androidTest/java/com/yc/yfiotlock/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/android/os/: IGpioService.aidl
app/src/main/aidl/com/yc/yfiotlock/: IMyAidlInterface.aidl
app/src/main/cpp/: aes.c  aes.h  b64.c  b64.h  ble.c  ble.h  cr4.c  cr4.h  crc16.c  crc16.h  yfble.c  yfble.h
app/src/main/java/com/kk/securityhttp/domain/: ChannelInfo.java  GoagalInfo.java  ResultInfo.java  TuiInfo.java
app/src/main/java/com/kk/securityhttp/engin/: BaseEngin.java  HttpCoreEngin.java
app/src/main/java/com/kk/securityhttp/utils/: DateUtil.java  DateUtils.java  EncryptUtil.java  FileUtil.java  LogUtil.java  PathUtil.java  VUiKit.java
app/src/main/java/com/yc/yfiotlock/: App.java
app/src/main/java/com/yc/yfiotlock/ble/: BleConnectReceiver.java  BleReflectionUtils.java  LockBLEBaseCmd.java  LockBLEData.java  LockBLEEventCmd.java  LockBLEManager.java  LockBLEOpCmd.java  LockBLEPackage.java  LockBLESend.java  LockBLESender.java  LockBLESettingCmd.java  LockBLEUtil.java  LockBLEUtils.java  LockBleLogCmd.java  LockBleSend.java
app/src/main/java/com/yc/yfiotlock/compat/: ToastCompat.java
app/src/main/java/com/yc/yfiotlock/constant/: Config.java
app/src/main/java/com/yc/yfiotlock/dao/: AppDatabase.java  DeviceDao.java  LockLogDao.java  OpenLockDao.java
app/src/main/java/com/yc/yfiotlock/demo/: CharacteristicActivity.java  DeviceAdapter.java  MainActivity.java  OperationActivity.java  RemoteService.java  ServiceActivity.java
app/src/main/java/com/yc/yfiotlock/download/: AppDownloadManager.java  DeviceDownloadManager.java  DownloadManager.java  DownloadProvider.java  DownloadUtils.java
app/src/main/java/com/yc/yfiotlock/helper/: CloudHelper.java  GlideHelper.java  PermissionHelper.java  Reflection.java  ShakeSensor.java  TOTP.java  ThreadPoolExecutorImpl.java
app/src/main/java/com/yc/yfiotlock/offline/: OLTOfflineManager.java  OLTWorker.java  OfflineManager.java  OfflineManagerReceiver.java  OfflineManagerService.java
app/src/main/java/com/yc/yfiotlock/utils/: AnimatinUtil.java  AnimatinUtils.java  BleUtil.java  BleUtils.java  CR4Util.java  (+13 more)
app/src/main/res/anim/: enter_from_bottom.xml  exit_from_bottom.xml
app/src/main/res/drawable/: circle_shape.xml  circular_progress_bar.xml  et_bg.xml  et_bg2.xml  et_no_underline.xml  et_underline_selected.xml  et_underline_unselected.xml  fast_login_btn_bg.xml  fast_login_normal.xml  fast_login_press.xml  layer_list_progress_drawable.xml  layer_list_progress_drawable2.xml  lock_ble_inner2_circle_bg.xml  lock_ble_inner_circle_bg.xml  lock_ble_white_circle_bg.xml  ripple_et_bg.xml  selector_item_bg.xml  shape_alarm_open_lock_manager.xml  shape_item_bg_press.xml  shape_process.xml  shape_process_none.xml  shape_red_round.xml  shape_round_btn.xml  shape_round_progress.xml  splash_bg_xml.xml  switch_bg.xml  switch_off.xml  switch_on.xml  switch_thumb_bg.xml  thumb_off.xml  thumb_on.xml
app/src/main/res/drawable-v24/: shap_solid_gray.xml  shap_stroke_blue.xml  shap_stroke_gray.xml
app/src/main/res/layout/: activity_charateristic.xml  activity_creat_pwd.xml  activity_creat_pwd_success.xml  activity_lock_log.xml  activity_login.xml  activity_main.xml  activity_open_lock.xml  activity_operation.xml  activity_splash.xml  activity_temp_password_open_lock.xml  activity_temp_pwd_detail.xml  activity_visitor_manage.xml  ble_lock_activity_device_info.xml  ble_lock_activity_f_a_q.xml  ble_lock_activity_f_a_q_detail.xml  ble_lock_activity_feed_back.xml  demo_activity_main.xml  demo_activity_operation.xml  demo_activity_service.xml  demo_adapter_device.xml  demo_adapter_service.xml  dialog_general.xml  dialog_loading.xml  dialog_receive_device.xml  dialog_success.xml  dialog_update_icon.xml  fragment_alarms.xml  fragment_log.xml  item_about_us.xml  item_code.xml  item_device_info.xml  item_device_receive.xml  item_device_share.xml  item_edit_user_info.xml  item_faq.xml  item_feed_back.xml  item_location.xml  item_lock_share.xml  item_log.xml  item_my.xml  (+74 more)
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml  network_config.xml
app/src/test/cpp/: BleTest.cc  BleTest.cpp  CMakeLists.txt  bleTest.cpp
app/src/test/java/com/yc/yfiotlock/: CR4Test.java  ExampleUnitTest.java  FileMd5Test.java  TOTPTest.java
gradle/wrapper/: gradle-wrapper.properties
(+293 files in other folders)
